Fixed meta section on mobile

--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@ hr {
 
 .post-meta-share > div {
   margin-left: 5px;
-  margin-right: 10px;
+  margin-right: 5px;
 }
 
 .post-meta-share > div:first-child {
@@ -36,7 +36,7 @@ hr {
 }
 
 .post-meta-separator {
-  margin-right: 10px;
+  margin-right: 5px;
 }
 
 .post-meta-share-icons button {
